--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/post-bg-desk.jpg
 email: syuukawa@sina.cn
 description: "Main"
 keyword: "Locusts, Locusts Blog, JiuTian, syuukawa, JiuTian"
-url: "http://syuukawa.github.io"          # your host, for absolute URL
+url: "http://aacoinonline.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/syuukawa/syuukawa.github.io.git" # you code repository
+github_repo: "https://github.com/aacoinonline/aacoinonline.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -19,10 +19,10 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     syuukawa
-github_username:    syuukawa
-facebook_username:  syuukawa
-jianshu_username:   syuukawa
+zhihu_username:     aacoinonline
+github_username:    aacoinonline
+facebook_username:  aacoinonline
+jianshu_username:   aacoinonline
 #twitter_username:   qiubaiying
 
 
@@ -56,7 +56,7 @@ kramdown:
 
 # 评论系统
 # Disqus settings（https://disqus.com/）
-disqus_username: syuukawa
+disqus_username: aacoinonline
 
 # 多说 将于2017年6月1日正式关停服务，建议使用 Disqus（http://dev.duoshuo.com/threads/58d1169ae293b89a20c57241）
 # Duoshuo settings
