--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Locusts
-SEOTitle: 九天的博客 | Locusts Blog
+SEOTitle: AACOIN OnLine | AACOIN Blog
 header-img: img/post-bg-desk.jpg
-email: syuukawa@sina.cn
+email: aacoinonline@163.com
 description: "Main"
-keyword: "Locusts, Locusts Blog, JiuTian, syuukawa, JiuTian"
+keyword: "AACOIN, AACOIN Blog"
 url: "http://aacoinonline.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/aacoinonline/aacoinonline.github.io.git" # you code repository
