--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Locusts
-SEOTitle: AACOIN OnLine | AACOIN Blog
+title: Aacoin
+SEOTitle: AACOIN OnLine
 header-img: img/post-bg-desk.jpg
 email: aacoinonline@163.com
 description: "Main"
@@ -56,7 +56,7 @@ kramdown:
 
 # 评论系统
 # Disqus settings（https://disqus.com/）
-disqus_username: aacoinonline
+# disqus_username: aacoinonline
 
 # 多说 将于2017年6月1日正式关停服务，建议使用 Disqus（http://dev.duoshuo.com/threads/58d1169ae293b89a20c57241）
 # Duoshuo settings
@@ -69,11 +69,11 @@ disqus_username: aacoinonline
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: b50bf2b12b5338a1845e33832976fd68
+# ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
-ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: auto
+# ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
+# ga_domain: auto
 
 
 
@@ -92,9 +92,9 @@ service-worker: true
 
 
 # Friends
-friends: [
-    {
-        title: "简书",
-        href: "http://www.jianshu.com/u/371e51866361"
-    }
-]
+#friends: [
+#    {
+#        title: "简书",
+#        href: "http://www.jianshu.com/u/371e51866361"
+#    }
+#]
