--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "by-blog",
-    "title": "Bye Stability Morning My Life002",
-    "author": "BY <qiubaiyingios@163.com>",
+    "name": "by-Aacoin",
+    "title": "Bye Stability Morning My Life -Aacoin",
+    "author": "",
     "version": "1.7.0",
-    "homepage": "http://qiubaiying.github.io",
+    "homepage": "http://aacoinonline.github.io",
     "repository": {
         "type": "git",
-        "url": "https://github.com/qiubaiying/qiubaiying.github.io"
+        "url": "https://github.com/aacoinonline/aacoinonline.github.io.git"
     },
-    "bugs": "https://github.com/qiubaiying/qiubaiying.github.io/issues",
+    "bugs": " ",
     "devDependencies": {
         "grunt": "~0.4.5",
         "grunt-contrib-less": "~0.11.4",
