--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "by-Aacoin",
-    "title": "Bye Stability Morning My Life -Aacoin",
+    "title": "Bye Stability Morning My Life --Aacoin",
     "author": "",
     "version": "1.7.0",
     "homepage": "http://aacoinonline.github.io",
