--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
 title: Aacoin
-SEOTitle: AACOIN OnLine
+SEOTitle: AACOIN-OnLine
 header-img: img/post-bg-desk.jpg
 email: aacoinonline@163.com
-description: "Main"
-keyword: "AACOIN, AACOIN Blog"
-url: "http://aacoinonline.github.io"          # your host, for absolute URL
+description: Main
+keyword: AACOIN
+url: http://aacoinonline.github.io         # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/aacoinonline/aacoinonline.github.io.git" # you code repository
+github_repo: https://github.com/aacoinonline/aacoinonline.github.io.git # you code repository
 
 # Sidebar settings 设置侧边栏
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Aacoin 群列表"
+sidebar-about-description: Aacoin 群列表
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -24,8 +24,6 @@ github_username:    aacoinonline
 facebook_username:  aacoinonline
 jianshu_username:   aacoinonline
 #twitter_username:   qiubaiying
-
-
 
 
 # Build settings
