--- a/_config.yml
+++ b/_config.yml
@@ -17,21 +17,21 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 
 
 # SNS settings
-RSS: false
+# RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     aacoinonline
-github_username:    aacoinonline
-facebook_username:  aacoinonline
-jianshu_username:   aacoinonline
-#twitter_username:   qiubaiying
+# zhihu_username:     aacoinonline
+# github_username:    aacoinonline
+# facebook_username:  aacoinonline
+# jianshu_username:   aacoinonline
+# twitter_username:   qiubaiying
 
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
-permalink: pretty
-paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
-anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+# permalink: pretty
+# paginate: 10
+# exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+# anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
 
 
