--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ github_repo: https://github.com/aacoinonline/aacoinonline.github.io.git # you co
 
 # Sidebar settings 设置侧边栏
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: Aacoin 信息
+sidebar-about-description: https://www.aacoin.com/
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
